--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,12 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "5.15.3",
+    "@notus-pro/react": "1.0.1",
+    "@popperjs/core": "2.9.2",
+    "@tailwindcss/forms": "0.3.2",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^17.0.2",
+    "chart.js": "3.1.0",
+    "classnames": "2.3.1",
+    "prop-types": "15.7.2",
+    "react": "17.0.2",
     "react-dom": "^17.0.2",
+    "react-router": "5.2.0",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "tailwindcss": "2.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
