--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,6 @@
     "react-router": "5.2.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
-    "tailwindcss": "2.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -44,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.0.23"
   }
 }
