--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "classnames": "2.3.1",
     "prop-types": "15.7.2",
     "react": "17.0.2",
+    "react-bootstrap": "^2.2.2",
     "react-dom": "^17.0.2",
     "react-router": "5.2.0",
     "react-router-dom": "^6.2.2",
