--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,15 @@ spring.jpa.properties.hibernate.format_sql=true
 #server.max-http-header-size=65536
 server= max-servlet-header-size: 5MB
 
+spring.mail.host=localhost
+spring.mail.port=1025
+spring.mail.username=hello
+spring.mail.password=hello
 
+spring.mail.properties.mail.smtp.ssl.trust="*"
+spring.mail.smtp.ssl.protocols=TLSv1.2
+spring.mail.properties.mail.smtp.auth.trust=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=3000
+spring.mail.properties.mail.smtp.writetimeout=5000
