--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "3.1.0",
     "classnames": "2.3.1",
+    "jotai": "^1.6.2",
     "prop-types": "15.7.2",
     "react": "17.0.2",
     "react-bootstrap": "^2.2.2",
