same navbar for all pages

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@ build/
 ### VS Code ###
 .vscode/
 frontend/src/Components/Cards/Register-Login-Components/test.js
+/frontend/src/Components/Cards/Register-Login-Components/test2.js
