fixed error that caused display errors on eshop page after adding products to cart
& navigating to another page/refreshing current page

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ build/
 .vscode/
 frontend/src/Components/Cards/Register-Login-Components/test.js
 /frontend/src/Components/Cards/Register-Login-Components/test2.js
+frontend/src/Components/Navbar/test
