--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,13 +5,9 @@
   "proxy": "http://localhost:3000",
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.15.3",
-
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.6.0",
-
-
-
     "@notus-pro/react": "1.0.1",
     "@popperjs/core": "2.9.2",
     "@tailwindcss/forms": "0.3.2",
@@ -28,6 +24,7 @@
     "react-router": "5.2.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "recoil": "^0.7.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
