--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react": "17.0.2",
     "react-bootstrap": "^2.2.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.30.0",
     "react-router": "5.2.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
