--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,7 @@
     "react-hook-form": "^7.30.0",
     "react-router": "5.2.0",
     "react-router-dom": "^6.2.2",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.0",
     "recoil": "^0.7.2",
     "web-vitals": "^2.1.4"
   },
