--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,9 @@
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "3.1.0",
     "classnames": "2.3.1",
+    "html2canvas": "^1.4.1",
     "jotai": "^1.6.2",
+    "jspdf": "^2.5.1",
     "prop-types": "15.7.2",
     "react": "17.0.2",
     "react-bootstrap": "^2.2.2",
